--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    
+
     <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}" type="text/css" />
 
     <title>{{ page_title }}</title>
@@ -16,11 +16,15 @@
 
 <body>
 
-    {% block content %} 
-    
-    {% endblock %}
+    {% block content %} {% endblock %}
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('.collapsible').collapsible();
+        });
+    </script>
 
 </body>
 
