--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,33 @@
-{% extends "base.html" %} {% block content %}
-
+{% extends "base.html" %} 
+{% block content %}
 
 <div class="container">
+    <div class="row">
+        <div class="col s12">
 
-    <ul class="collapsible" data-collapsible="accordion">
-        {% for row in data %}
-        <li>
-            <div class="collapsible-header"><i class="material-icons">filter_drama</i>{{ row.course_name }} - ({{ row.count_course }})</div>
-            <div class="collapsible-body"><span>{{ row.recipes_name }}</span>
-                <a href="#" class="btn"> View Recipe</a>
-            </div>
-        </li>
-        {% endfor %}
-    </ul>
-    <br>
-    <a href="#" class="btn"> Add New Recipe</a>
+            <ul class="collapsible popout" data-collapsible="accordion">
+                {% for course in course_data %}
+                <li>
+                    <div class="collapsible-header"><i class="material-icons">filter_drama</i> {{ course.course_name }} </div>
+
+                    {% for recipe in recipes_data %} 
+                        {% if course.course_name == recipe.course_name: %}
+                        <div class="collapsible-body"><span>{{ recipe.recipes_name }}</span>
+                            <a href="#" class="btn"> View Recipe</a>
+                        </div>
+                        {% else %} 
+                        {% endif %} 
+                    {% endfor %}
+
+                </li>
+                {% endfor %}
+            </ul>
+            
+            <br>
+            <a href="#" class="btn"> Add New Recipe</a>
+
+        </div>
+    </div>
 </div>
 
-
-{{ data }} {% endblock %}
+{% endblock %}
