--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,8 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $('.collapsible').collapsible();
+            
+            $('select').material_select();
         });
     </script>
 
