--- a/templates/recieps.html
+++ b/templates/recieps.html
@@ -50,7 +50,7 @@
                 {% endif %}
                 <li class="collection-item">
                     <div>{{ cuisine.name }}
-                        <a href="#!" class="secondary-content"><i class="material-icons">edit</i></a>
+                        <a href="{{url_for('cuisine', recipe_ID = recipe.ID, cuisine_ID = cuisine.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
                     </div>
                 </li>
                 {% endif %} {% endfor %}
