--- a/templates/cuisine_list.html
+++ b/templates/cuisine_list.html
@@ -21,9 +21,13 @@
 
             <div class="row">
                 <div class="input-field col s6">
-                    <input value="" id="cuisine_list_name" name="cuisine_list_name" type="text" class="validate">
-                    <label class="active" for="cuisine_list_name">Add new cuisine list name here</label>
-                    <a href="#!" class="secondary-content"><i class = "material-icons">add</i></a>
+
+                    <form action="{{ url_for('update_cuisine_list') }}" method="POST">
+                        <input id="cuisine_list_name" name="cuisine_list_name" type="text" class="validate">
+                        <label class="active" for="cuisine_list_name">Add New Cuisine Here</label>
+                        <input type="submit" value="Add New Cuisine" class="btn"> 
+                    </form>
+
                 </div>
             </div>
 
