--- a/templates/allergens_list.html
+++ b/templates/allergens_list.html
@@ -21,9 +21,13 @@
 
             <div class="row">
                 <div class="input-field col s6">
-                    <input value="" id="allergens_list_name" name="allergens_list_name" type="text" class="validate">
-                    <label class="active" for="allergens_list_name">Add new allergens list name here</label>
-                    <a href="#!" class="secondary-content"><i class = "material-icons">add</i></a>
+
+                    <form action="{{ url_for('update_allergens_list') }}" method="POST">
+                        <input value="" id="allergens_list_name" name="allergens_list_name" type="text" class="validate">
+                        <label class="active" for="allergens_list_name">Add New Allergen Here</label>
+                        <input type="submit" value="Add New Allergen" class="btn">
+                    </form>
+
                 </div>
             </div>
 
