New Feature: Added ability to mark a cuisine as deleted on a recipe

--- a/templates/cuisine.html
+++ b/templates/cuisine.html
@@ -11,7 +11,7 @@
                     </li>
                     {% for row in cuisine_data %}
                     <li class="collection-item">
-                        <div> {{row.cuisine_name}} <a href="#!" class="secondary-content"><i class = "material-icons">delete</i></a></div>
+                        <div> {{row.cuisine_name}} <a href="{{ url_for('delete_cuisine_from_recipe', recipe_ID = row.recipe_ID, cuisine_ID = row.cuisine_ID) }}" class="secondary-content"><i class = "material-icons">delete</i></a></div>
                     </li>
                     {% endfor %}
                 </ul>
@@ -19,20 +19,26 @@
 
             <div class="col s5">
                 <div class="row">
-                    <select>
-                        <option value = "" disabled selected>Select New Cuisine</option> 
+
+                    <form action="{{ url_for('add_cuisine_to_recipe', recipe_ID = cuisine_data[0].recipe_ID, cuisine_ID = cuisine_data[0].cuisine_ID) }}" method="POST">
+
+                        <select id="selection" name="selection">
+                            <option value = "" disabled selected>Select New Cuisine</option> 
                             {% for row in cuisine_list_data %}
-                                <option value = "1">{{row.cuisine_list_name}}</option>
+                                <option value = "{{row.cuisine_list_name}}" id="cuisine_name" name="cuisine_name">{{row.cuisine_list_name}}</option>
                             {% endfor %}
-                    </select>
-                    <a href="#" class="secondary-content"><i class = "material-icons">add</i></a>
+                        </select>
+
+                        <input type="submit" value="Add New Cuisine" class="btn">
+
                 </div>
             </div>
 
+
+
             <div class="col s12">
                 <div class="row">
-                    <a href="#" class="btn">Save</a>
-                    <a href="{{url_for('recipes', recipe_ID = cuisine_data[0].recipe_ID) }}" class="btn">Back</a>
+                    <a href="{{url_for('recipes', recipe_ID = cuisine_data[0].recipe_ID) }}" class="btn">Back To Recipe</a>
                 </div>
             </div>
         </div>
