--- a/templates/cuisine_list.html
+++ b/templates/cuisine_list.html
@@ -11,7 +11,7 @@
                             <div class="collapsible-header"><i class="material-icons">filter_drama</i>Cuisine List</div>
                             {% for row in cuisine_list_data %}
                             <div class="collapsible-body"><span>{{ row.cuisine_list_name }} </span>
-                                <a href="#!" class="secondary-content"><i class = "material-icons">delete</i></a>
+                                <a href="#" class="secondary-content"><i class = "material-icons">delete</i></a>
                             </div>
                             {% endfor %}
                         </li>
