Bug Fix: issue with data displaying on index page fiixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             <ul class="collapsible popout" data-collapsible="accordion">
                 {% for course in course_data %}
                 <li>
-                    <div class="collapsible-header"><i class="material-icons">filter_drama</i> {{ course.course_name }} </div>
+                    <div class="collapsible-header"><i class="material-icons">fastfood</i> {{ course.course_name }} </div>
 
                     {% for recipe in recipes_data %} 
                         {% if course.course_name == recipe.course_name: %}
