--- a/templates/directions.html
+++ b/templates/directions.html
@@ -11,18 +11,26 @@
                     <h5>{{ row.recipe_name }}</h5>
                 </div>
                 <div class="input-field col s10">
-
+                    {% if row.direction_name %}
                     <form action="{{ url_for('edit_direction', recipe_ID = row.recipe_ID , direction_ID = row.direction_ID ) }}" method="POST">
                         <textarea rows="40" cols="50" id="direction_name" name="direction_name" class="validate"> 
                         {{ row.direction_name }}
                     </textarea>
                         <label class="active" for="first_name2">Direction</label>
-                        <input type="submit" class = "btn" value="Save Change To Direction" />
+                        <input type="submit" class="btn" value="Save Change To Direction" />
                     </form>
-
+                    {% else %}
+                    <form action="{{ url_for('add_new_direction', recipe_ID = row.recipe_ID) }}" method="POST">
+                        <textarea rows="40" cols="50" id="direction_name" name="direction_name" class="validate"> 
+                    </textarea>
+                        <label class="active" for="first_name2">Direction</label>
+                        <input type="submit" class="btn" value="Add New Direction" />
+                    </form>
+                    {% endif %}
                 </div>
             </div>
             <a href="{{url_for('recipes', recipe_ID = row.recipe_ID)}}" class="btn">Back</a> {% endfor %}
+
         </div>
     </div>
 </div>
