--- a/templates/directions.html
+++ b/templates/directions.html
@@ -31,7 +31,7 @@
             </div>
 
             <a href="{{url_for('delete_direction_from_recipe', recipe_ID = row.recipe_ID, direction_ID = row.direction_ID)}}" class="btn">Delete Direction</a>
-            <a href="{{url_for('recipes', recipe_ID = row.recipe_ID)}}" class="btn">Back</a> {% endfor %}
+            <a href="{{url_for('recieps', recipe_ID = row.recipe_ID)}}" class="btn">Back</a> {% endfor %}
 
         </div>
     </div>
