--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                     {% for recipe in recipes_data %} 
                         {% if course.course_name == recipe.course_name: %}
                         <div class="collapsible-body"><span>{{ recipe.recipes_name }}</span>
-                            <a href="{{ url_for('recipes', recipe_ID = recipe.recipes_ID) }}" class="btn"> View Recipe</a>
+                            <a href="{{ url_for('recieps', recipe_ID = recipe.recipes_ID) }}" class="btn"> View Recipe</a>
                         </div>
                         {% else %} 
                         {% endif %} 
