New Feature: Add ability to add new recipes from home page

--- a/templates/course.html
+++ b/templates/course.html
@@ -36,7 +36,7 @@
 
             <div class="col s12">
                 <div class="row">
-                    <a href="{{url_for('recipes', recipe_ID = course_data[0].recipe_ID) }}" class="btn">Back To Recipe</a>
+                    <a href="{{url_for('recieps', recipe_ID = course_data[0].recipe_ID) }}" class="btn">Back To Recipe</a>
                 </div>
             </div>
         </div>
