--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,8 @@
             $('select').material_select();
 
             $(".button-collapse").sideNav();
+
+            $('.modal').modal();
         });
     </script>
 
