--- a/templates/allergens.html
+++ b/templates/allergens.html
@@ -4,6 +4,8 @@
     <div class="row">
         <div class="col s12">
 
+            <!-- If we fine some all data we display it on the page, else we handle it as new data input -->
+            {% if allergens_data: %}
             <div class="row">
                 <ul class="collection with-header">
                     <li class="collection-header">
@@ -19,9 +21,7 @@
 
             <div class="col s5">
                 <div class="row">
-
                     <form action="{{ url_for('add_allergens_to_recipe', recipe_ID = allergens_data[0].recipe_ID, allergens_ID = allergens_data[0].allergens_ID) }}" method="POST">
-
                         <select id="selection" name="selection">
                             <option value = "" disabled selected>Select New Cuisine</option> 
                             {% for row in allergens_list_data %}
@@ -32,14 +32,40 @@
                 </div>
             </div>
 
-            <div class="col s12">
+            {% else %} {% for recipe in recipes_data %}
+            <div class="row">
+                <ul class="collection with-header">
+                    <li class="collection-header">
+                        <h4> {{ recipe.recipe_name }} </h4>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col s5">
                 <div class="row">
-                    <a href="{{url_for('recipes', recipe_ID = allergens_data[0].recipe_ID) }}" class="btn">Back To Recieps</a>
+                    <form action="{{ url_for('add_allergens_to_recipe', recipe_ID = recipe_ID) }}" method="POST">
+                        <select id="selection" name="selection">
+                            <option value = "" disabled selected>Select New Cuisine</option> 
+                            {% for row in allergens_list_data %}
+                                <option value = "{{row.allergens_list_name}}" id="allergens_name" name="allergens_name">{{row.allergens_list_name}}</option>
+                            {% endfor %}
+                        </select>
+                        <input type="submit" value="Add New Allergen" class="btn">
+                </div>
+            </div>
+            {% endfor %} {% endif %}
+
+            <!-- draw a back button -->
+            <div class="row">
+                <div class="col s12">
+                    <div class="row">
+                        <a href="{{url_for('recieps', recipe_ID = recipe_ID ) }}" class="btn">Back To Recipe</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-</div>
+
 
 {% endblock %}
