--- a/templates/cuisine.html
+++ b/templates/cuisine.html
@@ -4,6 +4,8 @@
     <div class="row">
         <div class="col s12">
 
+            <!-- If we fine some cuisine data we display it on the page, else we handle it as new data input -->
+            {% if cuisine_data: %}
             <div class="row">
                 <ul class="collection with-header">
                     <li class="collection-header">
@@ -19,7 +21,6 @@
 
             <div class="col s5">
                 <div class="row">
-
                     <form action="{{ url_for('add_cuisine_to_recipe', recipe_ID = cuisine_data[0].recipe_ID, cuisine_ID = cuisine_data[0].cuisine_ID) }}" method="POST">
 
                         <select id="selection" name="selection">
@@ -28,22 +29,45 @@
                                 <option value = "{{row.cuisine_list_name}}" id="cuisine_name" name="cuisine_name">{{row.cuisine_list_name}}</option>
                             {% endfor %}
                         </select>
-
                         <input type="submit" value="Add New Cuisine" class="btn">
-
                 </div>
             </div>
 
-
-
-            <div class="col s12">
+            {% else %} {% for recipe in recipes_data %}
+            <div class="row">
+                <ul class="collection with-header">
+                    <li class="collection-header">
+                        <h4> {{ recipe.recipe_name }} </h4>
+                    </li>
+                </ul>
+            </div>
+            <div class="col s5">
                 <div class="row">
-                    <a href="{{url_for('recipes', recipe_ID = cuisine_data[0].recipe_ID) }}" class="btn">Back To Recipe</a>
+                    <form action="{{ url_for('add_cuisine_to_recipe', recipe_ID = recipe.recipe_ID) }}" method="POST">
+                        <select id="selection" name="selection">
+                            <option value = "" disabled selected>Select New Cuisine</option> 
+                            {% for row in cuisine_list_data %}
+                                <option value = "{{row.cuisine_list_name}}" id="cuisine_name" name="cuisine_name">{{row.cuisine_list_name}}</option>
+                            {% endfor %}
+                        </select>
+                        <input type="submit" value="Add New Cuisine" class="btn">
                 </div>
             </div>
+            {% endfor %} {% endif %} 
+            
+            <!-- draw a back button -->
+            <div class="row">
+                <div class="col s12">
+                    <div class="row">
+                        <a href="{{url_for('recieps', recipe_ID = recipe_ID ) }}" class="btn">Back To Recipe</a>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </div>
-</div>
+
 
 {% endblock %}
