--- a/templates/recieps.html
+++ b/templates/recieps.html
@@ -10,76 +10,125 @@
                 <li class="collection-header">
                     <h4>{{ recipe.name }}</h4>
                 </li>
-
+                {% if recipe.youtube_link: %}
                 <li class="collection-item">
                     <div>{{ recipe.youtube_link }}<a href="#!" class="secondary-content"><i class="material-icons">edit</i></a></div>
                 </li>
+                {% else %}
+                <li class="collection-item">
+                    <a href='#' class='btn'>Add YouTube Link</a>
+                </li>
+
+                {% endif %}
+
                 <!-- directions data insert-->
-                {% for direction in directions_data %} {% if recipe.ID == direction.recipes_ID: %} {% if loop.index == 1: %}
+                
                 <li class="collection-header">
                     <h5>Directions</h5> <a href="{{url_for('add_direction', recipe_ID = recipe.ID)}}" class="btn">Add New Direction</a>
                 </li>
-                {% endif %}
+                {% for direction in directions_data %} 
+                {% if recipe.ID == direction.recipes_ID: %} 
+
                 <li class="collection-item">
                     <div>Direction {{ loop.index }} : {{ direction.name }}
                         <a href="{{url_for('directions', recipe_ID = recipe.ID, direction_ID = direction.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
                     </div>
                 </li>
-                {% endif %} {% endfor %}
+
+                {% endif %} 
+                {% endfor %} 
 
 
                 <!-- ingredients data insert-->
-                {% for ingredient in ingredients_data %} {% if recipe.ID == ingredient.recipes_ID: %} {% if loop.index == 1: %}
+                
                 <li class="collection-header">
                     <h5>Ingredients</h5> <a href="{{url_for('add_ingredient', recipe_ID = recipe.ID)}}" class="btn">Add New Ingredient</a>
                 </li>
-                {% endif %}
+                {% for ingredient in ingredients_data %} 
+                {% if recipe.ID == ingredient.recipes_ID: %} 
+
                 <li class="collection-item">
                     <div>Ingredient {{ loop.index }} : {{ ingredient.name }} {{ ingredient.quantity }} {{ ingredient.unit_of_measurement }}
                         <a href="{{url_for('ingredients', recipe_ID = recipe.ID, ingredient_ID = ingredient.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
                     </div>
                 </li>
-                {% endif %} {% endfor %}
+                {% endif %}
+                {% endfor %}
 
 
                 <!-- cuisine data insert-->
-                {% for cuisine in cuisine_data %} {% if recipe.ID == cuisine.recipes_ID: %} {% if loop.index == 1: %}
+                
                 <li class="collection-header">
                     <h6>Cuisine</h6>
                 </li>
-                {% endif %}
+                {% if cuisine_data: %}
+                
+                {% for cuisine in cuisine_data %} 
+                {% if recipe.ID == cuisine.recipes_ID: %} 
+
                 <li class="collection-item">
                     <div>{{ cuisine.name }}
-                        <a href="{{url_for('cuisine', recipe_ID = recipe.ID, cuisine_ID = cuisine.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
+                        <a href="{{url_for('cuisine', recipe_ID = recipe.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
                     </div>
                 </li>
-                {% endif %} {% endfor %}
+                {% endif %} 
+                {% endfor %}
 
+                {% else %}
+                <li class="collection-item">
+                    <span>Add New Cuisine</span>
+                        <a href = "{{url_for('new_cuisine', recipe_ID = recipe.ID)}}" class="secondary-content"><i class="material-icons">add</i></a>
+                </li>
+                {% endif %}
                 <!-- course data insert-->
-                {% for course in course_data %} {% if recipe.ID == course.recipes_ID: %} {% if loop.index == 1: %}
+                
                 <li class="collection-header">
                     <h6>Course</h6>
                 </li>
-                {% endif %}
+                {% if course_data: %}
+                
+                {% for course in course_data %} 
+                {% if recipe.ID == course.recipes_ID: %} 
+
                 <li class="collection-item">
                     <div>{{ course.name }}
                         <a href="{{url_for('course', recipe_ID = recipe.ID, course_ID = course.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
                     </div>
                 </li>
-                {% endif %} {% endfor %}
+                {% endif %} 
+                {% endfor %}
+                
+                {% else %}
+                <li class="collection-item">
+                    <span>Add New Course</span>
+                        <a href = "#" class="secondary-content"><i class="material-icons">plus</i></a>
+                </li>
+                {% endif%}
 
                 <!-- allergen data insert-->
-                {% for allergen in allergens_data %} {% if recipe.ID == allergen.recipes_ID: %} {% if loop.index == 1: %}
+                
                 <li class="collection-header">
                     <h6>Allergies</h6>
                 </li>
-                {% endif %}
+                {% if allergens_data %}
+                
+                {% for allergen in allergens_data %} 
+                {% if recipe.ID == allergen.recipes_ID: %} 
+
                 <li class="collection-item">
                     <div>Allergies : {{ allergen.name }}
                         <a href="{{url_for('allergens', recipe_ID = recipe.ID, allergens_ID = allergen.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
                     </div>
                 </li>
-                {% endif %} {% endfor %}
+                {% endif %} 
+                {% endfor %}
+                
+                {% else %}
+                <li class="collection-item">
+                    <span>Add New Allergen</span>
+                        <a href = "{{url_for('new_allergen', recipe_ID = recipe.ID)}}" class="secondary-content"><i class="material-icons">add</i></a>
+                </li>
+                {% endif %}
 
             </ul>
 
